force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <description>A &quot;Reservation&quot; object represents a formal booking or temporary hold on a real estate property. It includes essential details such as the reserved property, reservation dates, reserving party&apos;s information, and terms of the reservation. Reservations in real estate enable clients to secure specific dates for property viewings or inspections. This object streamlines the scheduling process, prevents overlapping appointments, and enhances the overall client experience in the real estate industry.</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RES-{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>